--- a/.github/workflows/cpplint.yml
+++ b/.github/workflows/cpplint.yml
@@ -8,4 +8,4 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
     - run: pip install cpplint
-    - run: cpplint --recursive --root=src --filter=-whitespace/tab,-legal/copyright,-build/explicit_make_pair,-build/include_what_you_use,-build/storage_class,-runtime/int src/
+    - run: cpplint --recursive --filter=-whitespace/tab,-legal/copyright .
