--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,9 @@
 		"iterator": "cpp",
 		"memory_resource": "cpp",
 		"utility": "cpp",
-		"stop_token": "cpp"
+		"stop_token": "cpp",
+		"codecvt": "cpp",
+		"fstream": "cpp",
+		"iomanip": "cpp"
 	}
 }
