--- a/.github/workflows/cpplint.yml
+++ b/.github/workflows/cpplint.yml
@@ -8,4 +8,4 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
     - run: pip install cpplint
-    - run: cpplint --recursive --filter=-whitespace/tab,-whitespace/indent,-whitespace/comments,-legal/copyright,-build/include_what_you_use,-runtime/int .
+    - run: cpplint --recursive --filter=-whitespace/tab,-whitespace/indent,-whitespace/comments,-legal/copyright,-build/include_what_you_use,-runtime/int,-build/explicit_make_pair .
